--- a/index.html
+++ b/index.html
@@ -12,6 +12,77 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
+
+  <!-- modal window -->
+    <div class="backdrop" data-modal>
+        <div class="backdrop__modal">
+            <div class="backdrop__btn--container">
+                <button class="backdrop__btn--close" data-modal-close type="button" aria-label="Close modal window">
+                    <svg class="icon icon-vector">
+                        <use href="./images/icons.svg#icon-vector"></use>
+                    </svg>
+                </button>
+            </div>
+            <div class="anketa anketa-form">
+                <h4 class="anketa__title">Leave your contacts and we will call you back</h4>
+                <div class="anketa__container">
+                    <form class="form" autocomplete="on">    
+                        <div class="question form__question">
+                            <label class="question__label" for="user-name">Name</label>
+                            <div class="question__container--input">
+                                <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " />
+                                <svg class="icon icon-man form-icon">
+                                    <use href="./images/icons.svg#icon-man"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="question form__question">
+                            <label class="question__label" for="phone-number">Phone</label>
+                            <div class="question__container--input">
+                                <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" "/>
+                                <svg class="icon icon-phone form-icon">
+                                    <use href="./images/icons.svg#icon-phone"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="question form__question">
+                            <label class="question__label" for="email">Email</label>
+                            <div class="question__container--input">
+                                <input class="input-form" type="email" name="email" id="email" placeholder=" " />
+                                <svg class="icon icon-mail form-icon">
+                                    <use href="./images/icons.svg#icon-mail"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="question form__question">
+                            <label class="question__label" for="comments">Comment</label>
+                            <textarea class="comments-form" id="comments" name="comments" placeholder="Text input" rows="7"></textarea>
+                        </div>
+                        <div class="question form__agreement">
+                            <label class="question__label">
+                                <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" />
+                                    <span class="checkbox-icon-container">
+                                        <svg class="icon icon-checkmark"> 
+                                            <use href="images/icons.svg#icon-checkmark"></use>
+                                        </svg>
+                                    </span>
+                                I accept the terms and conditions of the&nbsp;
+                            <a href="" target="_blank" rel="noopener nofollow noreferrer">
+                                <span class="link--underline">
+                                    Privacy Policy
+                                </span>
+                            </a>
+                            </label>
+                        </div>
+                        <div class="question form__question">
+                            <button class="standartButtom btn-form" type="submit">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
   <body>
     <!-- main page of project -->
     <header class="page-header">
@@ -432,6 +503,19 @@
               </li>
           </ul>                 
         </div>
+        <div class="footer__column3 column">
+              <h4 class="footer__title">Subscribe</h4>
+              <ul class="footer__list--mail list">
+                  <li class="mail--submit">
+                      <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail"/>
+                      <button class="standartButtom btn-news" type="submit">Subscribe
+                          <svg class="icon icon-iconsend">
+                              <use href="images/icons.svg#icon-iconsend"></use>
+                          </svg>
+                      </button>
+                  </li>
+              </ul>
+          </div>
       </div>
     </footer>
   </body>
