remove slach from inputs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
 
-  <!-- modal window -->
+  <body>
+      <!-- modal window -->
     <div class="backdrop" data-modal>
         <div class="backdrop__modal">
             <div class="backdrop__btn--container">
@@ -30,7 +31,7 @@
                         <div class="question form__question">
                             <label class="question__label" for="user-name">Name</label>
                             <div class="question__container--input">
-                                <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " />
+                                <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " >
                                 <svg class="icon icon-man form-icon">
                                     <use href="./images/icons.svg#icon-man"></use>
                                 </svg>
@@ -39,7 +40,7 @@
                         <div class="question form__question">
                             <label class="question__label" for="phone-number">Phone</label>
                             <div class="question__container--input">
-                                <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" "/>
+                                <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" ">
                                 <svg class="icon icon-phone form-icon">
                                     <use href="./images/icons.svg#icon-phone"></use>
                                 </svg>
@@ -48,7 +49,7 @@
                         <div class="question form__question">
                             <label class="question__label" for="email">Email</label>
                             <div class="question__container--input">
-                                <input class="input-form" type="email" name="email" id="email" placeholder=" " />
+                                <input class="input-form" type="email" name="email" id="email" placeholder=" " >
                                 <svg class="icon icon-mail form-icon">
                                     <use href="./images/icons.svg#icon-mail"></use>
                                 </svg>
@@ -60,7 +61,7 @@
                         </div>
                         <div class="question form__agreement">
                             <label class="question__label">
-                                <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" />
+                                <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" >
                                     <span class="checkbox-icon-container">
                                         <svg class="icon icon-checkmark"> 
                                             <use href="images/icons.svg#icon-checkmark"></use>
@@ -77,13 +78,13 @@
                         <div class="question form__question">
                             <button class="standartButtom btn-form" type="submit">Send</button>
                         </div>
-                    </form>
+                      </form>
+                    </div>
+                  </div>
                 </div>
-            </div>
-        </div>
-    </div>
+              </div>
+              
 
-  <body>
     <!-- main page of project -->
     <header class="page-header">
       <div class="container">
@@ -507,7 +508,7 @@
               <h4 class="footer__title">Subscribe</h4>
               <ul class="footer__list--mail list">
                   <li class="mail--submit">
-                      <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail"/>
+                      <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
                       <button class="standartButtom btn-news" type="submit">Subscribe
                           <svg class="icon icon-iconsend">
                               <use href="images/icons.svg#icon-iconsend"></use>
@@ -519,4 +520,5 @@
       </div>
     </footer>
   </body>
+  
 </html>
