--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer__column1 column">
+        <div class="footer_column1 column">
           <a class="logo footer-logo" href="./index.html"> Web<span class="logo-style">Studio</span> </a>
           <p class="footer__text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
           </p>
         </div>
-        <div class="footer__column2 column">
+        <div class="footer_column2 column">
           <p class="footer__title">Social media</p>
           <ul class="footer__list--social list">
               <li class="social__item">
@@ -433,18 +433,21 @@
               </li>
           </ul>                 
         </div>
-        <div class="footer__column3 column">
-              <h4 class="footer__title">Subscribe</h4>
-              <ul class="footer__list--mail list">
-                  <li class="mail--submit">
-                      <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
+        <div class="footer_column3 column">
+              <p class="footer__title">Subscribe</p>
+              <div class="footer__list--mail list">
+   
+                    <form class="mail--submit">
+                      <label>
+                        <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
+                      </label>
                       <button class="standartButtom btn-news" type="submit">Subscribe
-                          <svg class="icon icon-iconsend">
+                          <svg class="icon icon-iconsend" width="24" height="24">
                               <use href="images/icons.svg#icon-iconsend"></use>
                           </svg>
                       </button>
-                  </li>
-              </ul>
+
+              </div>
           </div>
       </div>
     </footer>
@@ -452,70 +455,67 @@
           <!-- modal window -->
     <div class="backdrop" data-modal>
         <div class="backdrop__modal">
-            <div class="backdrop__btn--container">
-                <button class="backdrop__btn--close" data-modal-close type="button" aria-label="Close modal window">
-                    <svg class="icon icon-vector">
-                        <use href="./images/icons.svg#icon-vector"></use>
-                    </svg>
-                </button>
-            </div>
-            <div class="anketa anketa-form">
-                <h4 class="anketa__title">Leave your contacts and we will call you back</h4>
-                <div class="anketa__container">
-                    <form class="form" autocomplete="on">    
-                        <div class="question form__question">
-                            <label class="question__label" for="user-name">Name</label>
-                            <div class="question__container--input">
-                                <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " >
-                                <svg class="icon icon-man form-icon">
-                                    <use href="./images/icons.svg#icon-man"></use>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="question form__question">
-                            <label class="question__label" for="phone-number">Phone</label>
-                            <div class="question__container--input">
-                                <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" ">
-                                <svg class="icon icon-phone form-icon">
-                                    <use href="./images/icons.svg#icon-phone"></use>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="question form__question">
-                            <label class="question__label" for="email">Email</label>
-                            <div class="question__container--input">
-                                <input class="input-form" type="email" name="email" id="email" placeholder=" " >
-                                <svg class="icon icon-mail form-icon">
-                                    <use href="./images/icons.svg#icon-mail"></use>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="question form__question">
-                            <label class="question__label" for="comments">Comment</label>
-                            <textarea class="comments-form" id="comments" name="comments" placeholder="Text input" rows="7"></textarea>
-                        </div>
-                        <div class="question form__agreement">
-                            <label class="question__label">
-                                <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" >
-                                    <span class="checkbox-icon-container">
-                                        <svg class="icon icon-checkmark"> 
-                                            <use href="images/icons.svg#icon-checkmark"></use>
-                                        </svg>
-                                    </span>
-                                I accept the terms and conditions of the&nbsp;
-                            <a href="" target="_blank" rel="noopener nofollow noreferrer">
-                                <span class="link--underline">
-                                    Privacy Policy
-                                </span>
-                            </a>
-                            </label>
-                        </div>
-                        <div class="question form__question">
-                            <button class="standartButtom btn-form" type="submit">Send</button>
-                        </div>
-                    </form>
+            <button class="backdrop__btn-close" data-modal-close type="button" aria-label="Close modal window">
+                <svg class="icon-vector" width="8" height="8">
+                    <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+            </button>
+
+            <p class="anketa__title">Leave your contacts and we will call you back</p>
+
+            <form class="form anketa__container" autocomplete="on">    
+                <div class="question form__question">
+                    <label class="question__label" for="user-name">Name</label>
+                    <div class="question__container-input">
+                        <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " >
+                        <svg class="icon-man form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-man"></use>
+                        </svg>
+                    </div>
                 </div>
-            </div>
+                <div class="question form__question">
+                    <label class="question__label" for="phone-number">Phone</label>
+                    <div class="question__container-input">
+                        <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" ">
+                        <svg class="icon-phone form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="question form__question">
+                    <label class="question__label" for="email">Email</label>
+                    <div class="question__container-input">
+                        <input class="input-form" type="email" name="email" id="email" placeholder=" " >
+                        <svg class="icon-mail form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="question form__question">
+                    <label class="question__label" for="comments">Comment</label>
+                    <textarea class="comments-form" id="comments" name="comments" placeholder="Text input" rows="7"></textarea>
+                </div>
+                <div class="question form__agreement">
+                    <label class="question__label">
+                        <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" >
+                            <span class="checkbox-icon-container">
+                                <svg class="icon icon-checkmark"> 
+                                    <use href="images/icons.svg#icon-checkmark"></use>
+                                </svg>
+                            </span>
+                        I accept the terms and conditions of the&nbsp;
+                    <a href="" target="_blank" rel="noopener nofollow noreferrer">
+                        <span class="link--underline">
+                            Privacy Policy
+                        </span>
+                    </a>
+                    </label>
+                </div>
+                <div class="question form__question">
+                    <button class="standartButtom btn-form" type="submit">Send</button>
+                </div>
+            </form>
+
         </div>
     </div>
 
