--- a/index.html
+++ b/index.html
@@ -446,9 +446,10 @@
                               <use href="images/icons.svg#icon-iconsend"></use>
                           </svg>
                       </button>
-
+                    </form>
               </div>
-          </div>
+        </div>
+
       </div>
     </footer>
 
