--- a/index.html
+++ b/index.html
@@ -435,19 +435,17 @@
         </div>
         <div class="footer_column3 column">
               <p class="footer__title">Subscribe</p>
-              <div class="footer__list--mail list">
-   
-                    <form class="mail--submit">
-                      <label class="email-label">
-                        <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
-                      </label>
-                      <button class="standartButtom btn-news" type="submit">Subscribe
-                          <svg class="icon icon-iconsend" width="24" height="24">
-                              <use href="./images/icons.svg#icon-iconsend"></use>
-                          </svg>
-                      </button>
-                    </form>
-              </div>
+              <form class="mail-submit">
+                <label class="email-label">
+                  <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
+                </label>
+                <button class="standartButtom btn-news" type="submit">Subscribe
+                    <svg class="icon icon-iconsend" width="24" height="24">
+                        <use href="./images/icons.svg#icon-iconsend"></use>
+                    </svg>
+                </button>
+              </form>
+
         </div>
 
       </div>
