correct names of the vlasses

--- a/index.html
+++ b/index.html
@@ -393,15 +393,15 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer_column1 column">
+        <div class="footer_column_a column">
           <a class="logo footer-logo" href="./index.html"> Web<span class="logo-style">Studio</span> </a>
           <p class="footer__text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
           </p>
         </div>
-        <div class="footer_column2 column">
-          <p class="footer__title">Social media</p>
+        <div class="footer_column_b column">
+          <p class="footer_title">Social media</p>
           <ul class="footer__list--social list">
               <li class="social__item">
                   <a class="social__link" href="" target="_blank" rel="noopener nofollow noreferrer" aria-label="Connect by instagram">
@@ -433,13 +433,13 @@
               </li>
           </ul>                 
         </div>
-        <div class="footer_column3 column">
-              <p class="footer__title">Subscribe</p>
+        <div class="footer_column_c column">
+              <p class="footer_title">Subscribe</p>
               <form class="mail-submit">
                 <label class="email-label">
                   <input type="email" name="email-for-news" class="email-for-news" placeholder="E-mail" >
                 </label>
-                <button class="standartButtom btn-news" type="submit">Subscribe
+                <button class="standart-button btn-news" type="submit">Subscribe
                     <svg class="icon icon-iconsend" width="24" height="24">
                         <use href="./images/icons.svg#icon-iconsend"></use>
                     </svg>
@@ -511,7 +511,7 @@
                     </label>
                 </div>
                 <div class="question form__question">
-                    <button class="standartButtom btn-form" type="submit">Send</button>
+                    <button class="standart-button btn-form" type="submit">Send</button>
                 </div>
             </form>
 
