--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <label class="question__label" for="user-name">Name</label>
                     <div class="question__container-input">
                         <input class="input-form" type="text" name="user-name" id="user-name" placeholder=" " >
-                        <svg class="icon-man form-icon" width="18" height="24">
+                        <svg class="form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-man"></use>
                         </svg>
                     </div>
@@ -476,7 +476,7 @@
                     <label class="question__label" for="phone-number">Phone</label>
                     <div class="question__container-input">
                         <input class="input-form" type="tel" name="phone-number" id="phone-number" placeholder=" ">
-                        <svg class="icon-phone form-icon" width="18" height="24">
+                        <svg class="form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
@@ -485,23 +485,23 @@
                     <label class="question__label" for="email">Email</label>
                     <div class="question__container-input">
                         <input class="input-form" type="email" name="email" id="email" placeholder=" " >
-                        <svg class="icon-mail form-icon" width="18" height="24">
+                        <svg class="form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="question form__question">
-                    <label class="question__label" for="comments">Comment</label>
-                    <textarea class="comments-form" id="comments" name="comments" placeholder="Text input" rows="7"></textarea>
+                    <label class="question__label" for="user-comment">Comment</label>
+                    <textarea class="comments-form" id="user-comment" name="user-comment" placeholder="Text input" rows="7"></textarea>
                 </div>
                 <div class="question form__agreement">
-                    <label class="question__label">
-                        <input class="style-checkbox" type="checkbox" id="agreement" value="agree with contract" >
-                            <span class="checkbox-icon-container">
-                                <svg class="icon icon-checkmark"> 
-                                    <use href="images/icons.svg#icon-checkmark"></use>
-                                </svg>
-                            </span>
+                  <input class="style-checkbox visually-hidden" type="checkbox"  id="user-privacy"  value="true" name="user-privacy" >
+                  <label class="question__label"  for="user-privacy">
+                    <span class="checkbox-icon-container">
+                          <svg class="icon icon-checkmark" width="10" height="8"> 
+                              <use href="images/icons.svg#icon-checkmark"></use>
+                          </svg>
+                      </span>
                         I accept the terms and conditions of the&nbsp;
                     <a href="" target="_blank" rel="noopener nofollow noreferrer">
                         <span class="link--underline">
@@ -510,9 +510,9 @@
                     </a>
                     </label>
                 </div>
-                <div class="question form__question">
+ 
                     <button class="standart-button btn-form" type="submit">Send</button>
-                </div>
+
             </form>
 
         </div>
