--- a/index.html
+++ b/index.html
@@ -499,14 +499,14 @@
                   <label class="question__label"  for="user-privacy">
                     <span class="checkbox-icon-container">
                           <svg class="icon icon-checkmark" width="10" height="8"> 
-                              <use href="images/icons.svg#icon-checkmark"></use>
+                              <use href="./images/icons.svg#icon-checkmark"></use>
                           </svg>
                       </span>
                         I accept the terms and conditions of the&nbsp;
-                    <a href="" target="_blank" rel="noopener nofollow noreferrer">
-                        <span class="link--underline">
+                    <a href="" target="_blank" rel="noopener nofollow noreferrer" class="link--underline">
+ 
                             Privacy Policy
-                        </span>
+
                     </a>
                     </label>
                 </div>
